<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
	<description>Zoxweb public utilities jar</description>
	<url>http://www.zoxweb.com</url>
	<name>zoxweb-core</name>
    <groupId>org.zoxweb</groupId>
    <artifactId>zoxweb-core</artifactId>
    <version>2.0.8</version>
    <packaging>jar</packaging>

    <licenses>
      <license>
        <name>Apache License, Version 2.0</name>
        <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      </license>
    </licenses>
    

    
    
    <scm>
    	<url>https://github.com/fidusio/zoxweb-core.git</url>
    	<connection>scm:git:git://github.com/fidusio/zoxweb-core.git</connection>
    	<developerConnection>scm:git:git://github.com/fidusio/zoxweb-core.git</developerConnection>
    </scm>
    
    
    <developers>
	    <developer>
	      <id>javaconsigliere</id>
	      <name>Java Consigliere</name>
	      <email>javaconsigliere@gmail.com</email>
	      <url>http://zoxweb.com</url>
	      <organization>ZoxWeb.com</organization>
	      <organizationUrl>http://www.zoxweb.com</organizationUrl>
	      <roles>
	        <role>architect</role>
	        <role>developer</role>
	      </roles>
	      <timezone>America/Los_Angeles</timezone>
   		</developer>
  </developers>

  <!-- Version definition -->
    <properties>
    	<jdk.version>1.9</jdk.version>
        <gwt.version>2.8.1</gwt.version>
        <websocket.version>1.1</websocket.version>
        <gson.version>2.8.1</gson.version>
        <apache-shiro.version>1.3.2</apache-shiro.version>
        <commons-fileupload.version>1.3.3</commons-fileupload.version>
        <jsoup.version>1.10.3</jsoup.version>
        <javax-mail.version>1.6.0</javax-mail.version>
        <junit.version>4.8.2</junit.version>
        <common-codec.version>1.10</common-codec.version>
        <rabbitmq-client.version>4.1.0</rabbitmq-client.version>
		<ehcache.version>2.10.3</ehcache.version>
		<maven-plugin.version>3.6.1</maven-plugin.version>
		<maven-plugin-source.version>3.0.1</maven-plugin-source.version>
		<maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
		<maven-javadoc.version>2.10.4</maven-javadoc.version>
        <javaee-api.version>7.0</javaee-api.version>
        <javax-servlet.version>3.0.1</javax-servlet.version>
       
        <ehcache-org.version>3.4.0</ehcache-org.version>

    </properties>

    <!-- default
    <name>Maven Quick Start Archetype</name>
    <url>http://maven.apache.org</url>
    -->
    <build>
    	    <directory>target</directory>
    	    <!--  
    		<outputDirectory>war/WEB-INF/classes</outputDirectory>
    		-->
    		<resources>
                	<resource>
                	 <directory>src/main/java/</directory>
                	</resource>
                	<resource>
                	 <directory>src/main/resources/</directory>
                	</resource>
             </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-plugin.version}</version>
                <configuration>
                		
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
                
            </plugin>
            
            
            
                <plugin>
			      <groupId>org.apache.maven.plugins</groupId>
			      <artifactId>maven-source-plugin</artifactId>
			       <version>${maven-plugin-source.version}</version>
			      <executions>
			        <execution>
			          <id>attach-sources</id>
			          <goals>
			            <goal>jar</goal>
			          </goals>
			        </execution>
			      </executions>
			    </plugin>
			    
			    <plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-jar-plugin</artifactId>
				    <version>${maven-jar-plugin.version}</version>
				    <executions>
				        <execution>
				            <goals>
				                <goal>test-jar</goal>
				            </goals>
				        </execution>
				    </executions>
				</plugin>
			    
		        <plugin>
			      <groupId>org.apache.maven.plugins</groupId>
			      <artifactId>maven-javadoc-plugin</artifactId>
			      <version>${maven-javadoc.version}</version>
			      <configuration>
			      	 <failOnError>false</failOnError>
			      </configuration>
			      
			      <executions>
			        <execution>
			          <id>attach-javadocs</id>
			          <goals>
			            <goal>jar</goal>
			            
			          </goals>
			         
			        </execution>
			      </executions>
			    </plugin>
		        
        </plugins>
        
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
            <scope>provided</scope>
        </dependency> 
        <dependency>
    		<groupId>javax.websocket</groupId>
    		<artifactId>javax.websocket-api</artifactId>
    		<version>${websocket.version}</version>
    		<scope>provided</scope>
	    </dependency>
	   
        
        
        <dependency>
	    	<groupId>javax.servlet</groupId>
	    	<artifactId>javax.servlet-api</artifactId>
	    	<version>${javax-servlet.version}</version>
	    	<scope>provided</scope>
		</dependency>
       
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>${commons-fileupload.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>javax.mail-api</artifactId>
            <version>${javax-mail.version}</version>
            <scope>provided</scope>
        </dependency>
        
		<dependency>
		      <groupId>org.ehcache</groupId>
		      <artifactId>ehcache</artifactId>
		      <version>${ehcache-org.version}</version>
		      
	    </dependency>
	    
	    <dependency>
		  <groupId>javax.cache</groupId>
		  <artifactId>cache-api</artifactId>
		  <version>1.0.0</version>
		</dependency>
		
      


    </dependencies>

</project>